# EZPass

./: .gitignore  Cargo.toml  app.db  build.rs  ezpass.rc  readmepls.txt
.github/workflows/: build.yml  rust.yml
src/: backend.rs  main.rs  mod.rs  ui.rs
ui/: app-window.slint
wix/: main.wxs
