[package]
name = "EZPass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
winres = "0.1.12"
rand = "0.8.5"
argon2 = { version = "0.5.3", features = ["password-hash"] }
anyhow = "1.0.97"
sha2 = "0.10.8"
rfd = "0.15.1"
diesel ="2.2.8"
slint = { version = "=1.10.0", default-features = false, features = [
    "std",
    "renderer-skia",
    "backend-winit",
    "compat-1-2"
] }
block-modes = "0.9.1"
aes = "0.8.4"
belt-ctr = "0.1.0"
ctr = "0.9.2"
cipher = "0.4.4"
dirs = "6.0.0"
tokio = { version = "1.44.0", features = ["full"] }
orion = "0.17.9"
rand_core = "0.9.1"
r2d2 = "0.8.10"
tokio-tungstenite = "0.26.2"
r2d2_sqlite = "0.27.0"
futures-util = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"
publicsuffix = "2.3.0"
regex = "1.11.1"
once_cell= "*"


[build-dependencies]
slint-build = "1.10.0"
winres = "0.1.12"
