[package]
name = "EZPass"
version = "0.1.0"
edition = "2021"
description = "Secure password manager built with rust."
authors = ["XTassy"]
homepage = "https://ezpassprogram.vercel.app/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"                     # For salts/keys
rfd = "0.15.0"                     # File dialogs
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] } # Lightweight SQLite
argon2 = "0.5.3"                   # Password hashing
anyhow = "1.0.92"                  # Error handling
sha2 = "0.10.8"                    # Checksums
tokio = { version = "1.44.1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] } # Async runtime, trimmed features
tokio-tungstenite = "0.26.2"       # WebSocket support
futures-util = "0.3.31"            # Futures support
serde = { version = "1.0.214", features = ["derive"] } # Serialization
serde_json = "1.0.132"             # JSON handling
once_cell = "1.20.2"               # Lazy initialization
simple_crypt = "0.2.0"             # Encryption
hex = "0.4.3"                      # Hex encoding
dirs = "6.0.0"                     # Directory access           

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1.44"
slint = { version = "1.10.0", default-features = false, features = ["std", "renderer-femtovg", "backend-winit", "compat-1-2"] } # GUI
winit = { version = "0.30.9", features = ["wayland", "x11"] }  



[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
slint = { version = "1.10.0", default-features = false, features = ["std", "renderer-femtovg", "backend-winit", "compat-1-2"] } # GUI

[package.metadata.wix]
eula = false

[profile.release]
opt-level = 3 
lto = true      
codegen-units = 1 
panic = "abort"   
strip = true      
debug = false

[build-dependencies]
slint-build = "1.10.0"
winres = "0.1.12"
image = "0.25.6"
embed-resource = "3.0.2"
